--- a/partials/invite.html
+++ b/partials/invite.html
@@ -3,7 +3,7 @@
         <h1>Invitation Creator</h1>
         <form>
             <label>Give name:</label>
-            <input type="text" ng-model="invited.name" placeholder="Invited Name" autofocus>
+            <input type="text" name="invitedName" ng-model="invited.name" placeholder="Invited Name" autofocus>
             <button ng-click="inviteButton()">+Add</button>
         </form>
     </div>
