--- a/partials/createWedding.html
+++ b/partials/createWedding.html
@@ -6,7 +6,7 @@
         <input type="text" name="name" ng-model="event.name" required><br>
         <label>Invitation text</label>
         <input type="text" name="comment" ng-model="event.comment" required><br>
-        <button ng-click="eventButton()">Submit</button>
+        <button ng-click="createEvent()">Submit</button>
 
         {{invitation.uuid}}
         <br><br>
