pop up created, minor changes, libs added

--- a/partials/createWedding.html
+++ b/partials/createWedding.html
@@ -5,10 +5,7 @@
         <input type="text" name="name" ng-model="event.name" required><br>
         <label>Invitation text</label>
         <input type="text" name="comment" ng-model="event.comment" required><br>
-        <button ng-click="createEvent()">Submit</button>
-
-        {{invitation.uuid}}
+        <md-button ng-click="createEvent()">Submit</md-button>
         <br><br>
-        <a href="#/invite">Invite your friends!</a>
     </div>
 </section>
