--- a/partials/invite.html
+++ b/partials/invite.html
@@ -4,7 +4,10 @@
         <form>
             <label>Give name:</label>
             <input type="text" name="invitedName" ng-model="invited.name" placeholder="Invited Name" autofocus>
-            <button ng-click="inviteButton()">+Add</button>
+            <button ng-click="inviteButton(invited.name)">+Add</button>
         </form>
+        <div ng-repeat="people in guests track by $index">
+            {{people}}
+        </div>
     </div>
 </section>
