--- a/partials/initialPage.html
+++ b/partials/initialPage.html
@@ -1,8 +1,16 @@
 <section>
-    <div>
-        <button ng-click="goCreate()">Create your wedding</button>
-    </div>
-    <div>
-        <button ng-click="goEdit()">Edit an existing wedding</button>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>CREATE A WEDDING HERE</h1>
+            <p class="lead">Welcome to our web wedding creator! Below you can create your wedding or edit an existing wedding! </p>
+
+            <div class = "button1">
+                <button ng-click="goCreate()">Create your wedding</button>
+            </div>
+            <div class = "button2">
+                <button ng-click="goEdit()">Edit an existing wedding</button>
+            </div>
+         </div>
     </div>
 </section>
+
