--- a/partials/invite.html
+++ b/partials/invite.html
@@ -1,18 +1,22 @@
 <section>
-    <div>
-        <h1>Invitation Creator</h1>
-        <form>
-            <label>Give name:</label>
-            <input type="text" name="invitedName" ng-model="invited.name" placeholder="Invited Name" autofocus required>
-            <button ng-click="createInvites(invited.name)">+Add</button>
-        </form>
-        <div ng-repeat="people in guests track by $index">
-            <button ng-click="deleteSomeone(people, $index)">Delete guest</button>
-            <button ng-click="downloadQR(people)">Download QR</button>
-            {{people.name}}
-        </div>
-        <div>
-            <button ng-click="deleteEvent()">Delete event</button>
+    <div class="container">
+        <div class="jumbotron">
+            <div>
+                <h1>Invitation Creator</h1>
+                <form>
+                    <label>Give name:</label>
+                    <input type="text" name="invitedName" ng-model="invited.name" placeholder="Invited Name" autofocus required>
+                    <button ng-click="createInvites(invited.name)">+Add</button>
+                </form>
+                <div ng-repeat="people in guests track by $index">
+                    <button ng-click="deleteSomeone(people, $index)">Delete guest</button>
+                    <button ng-click="downloadQR(people)">Download QR</button>
+                    {{people.name}}
+                </div>
+                <div>
+                    <button ng-click="deleteEvent()">Delete event</button>
+                </div>
+            </div>
         </div>
     </div>
 </section>
