--- a/partials/pending.html
+++ b/partials/pending.html
@@ -1,8 +1,12 @@
 <section>
-    <div>
-        <button ng-click="accepted()">ACCEPT</button>
-    </div>
-    <div>
-        <md-button ng-click="declined()">DECLINE</md-button>
+    <div class="container">
+        <div class="jumbotron">
+            <div>
+                <button ng-click="accepted()">ACCEPT</button>
+            </div>
+            <div>
+                <md-button ng-click="declined()">DECLINE</md-button>
+            </div>
+        </div>
     </div>
 </section>
